--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper">    
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
@@ -51,8 +51,8 @@
                         </ul>
                     </form>
                 </div>
-                <div class="col-md-9">
-                    <table class="table table-striped">
+                <div class="col-md-9">   
+                   <table class="table table-striped">
                         <thead>
                           <tr>
                             <th>Date</th>
@@ -64,11 +64,15 @@
                             <th>Comments</th>
                           </tr>
                         </thead>
-                        <tbody></tbody>
-                      </table>
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
