--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
                             </li>
                             <li class="list-group-item bg-dark">
-                                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                                <label for="date">Enter City</label><br />
+                                <input type="text" placeholder="City" id="city" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="date">Enter State</label><br />
+                                <input type="text" placeholder="State" id="state" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="date">Enter Country</label><br />
+                                <input type="text" placeholder="Country" id="country" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="date">Enter Shape</label><br />
+                                <input type="text" placeholder="Shape" id="shape" />
                             </li>
                         </ul>
                     </form>
